# WASM-Sudoku

./: .gitignore  README.md  package-lock.json  package.json
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
src/: App.tsx  index.html  index.tsx
src/components/: Board.tsx  Footer.tsx  Header.tsx
src/constants/: IBoardElement.ts  OpTypes.ts
src/store/: Atoms.ts
src/utils/: autoSolve.ts  autoSolveTeaVM.ts  converters.ts  createBoard.js
teavm-wasm/: teavm-wasm.js
teavm-wasm/wasm/: benchmark.wasm  benchmark.wasm-runtime.js
