# Build config file for Rust wasm

[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["zixiangj@andrew.cmu.edu"]
description = "Sokudo gamw with Rust wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/z1x1an9/WASM-Sudoku"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
